--- a/package.json
+++ b/package.json
@@ -1,4 +1,12 @@
 {
+"scripts": {
+  "dev": "vite",
+  "build": "vite build",
+  "build:dev": "vite build --mode development",
+  "preview": "vite preview"
+}
+
+  
   "dependencies": {
     "vite": "^6.3.3"
   }
