--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "preview": "vite preview"
+      "start": "node server.js",               // 🔥 Add this for production start
+  "server:dev": "nodemon server.js"        // 🔧 Optional: For backend dev
   },
   "dependencies": {
     "@vitejs/plugin-react": "^4.4.1",
