--- a/auth-server/package.json
+++ b/auth-server/package.json
@@ -13,7 +13,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
-    "jsonwebtoken": "^9.0.0"
+    "jsonwebtoken": "^9.0.0",
+    "mysql2": "^3.9.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
@@ -22,3 +23,4 @@
   "author": "",
   "license": "ISC"
 }
+
