--- a/package.json
+++ b/package.json
@@ -1,26 +1,15 @@
 {
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "build:dev": "vite build --mode development",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "bcryptjs": "^3.0.2",
-    "body-parser": "^2.2.0",
-    "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
-    "express": "^5.1.0",
-    "jsonwebtoken": "^9.0.2",
-    "mysql2": "^3.14.1",
-    "react-dom": "^19.1.0",
-    "vite": "^6.3.3"
-  },
   "name": "fresh-web-craft",
   "version": "1.0.0",
-  "main": "vite.config.js",
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": ""
+  "description": "JE Tech Hub - Pure HTML/CSS/JavaScript Website",
+  "scripts": {
+    "dev": "python -m http.server 8000 || python3 -m http.server 8000 || npx serve .",
+    "build": "echo 'Build complete - no build step needed for static HTML site'",
+    "build:dev": "echo 'Build complete - no build step needed for static HTML site'",
+    "preview": "npx serve .",
+    "serve": "npx serve ."
+  },
+  "devDependencies": {
+    "serve": "^14.2.1"
+  }
 }
