--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "preview": "npx serve .",
     "serve": "npx serve ."
   },
- "dependencies": {
-    "vite": "^4.4.0"
+  "devDependencies": {
+    "serve": "^14.2.1"
   }
 }
